--- a/GTD_EDA_Submission_.ipynb
+++ b/GTD_EDA_Submission_.ipynb
@@ -145,10 +145,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the summary here within 500-600 words."
+        "In this project, I explored a dataset containing information about global terrorism acts since 1970, and attempted to make the findings as visual as possible. The dataset used is called the Global Terrorism Database available here, and contains over 100,000 terrorist incidents worldwide, with over 100 different attributes for each incident.\n",
+        "\n",
+        "The Global Terrorism Database (GTD) is an open-source database including information on terrorist attacks around the world from 1970 through 2017. The GTD includes systematic data on domestic as well as international terrorist incidents that have occurred during this time period and now includes more than 180,000 attacks. The database is maintained by researchers at the National Consortium for the Study of Terrorism and Responses to Terrorism (START), headquartered at the University of Maryland.\n",
+        "\n"
       ],
       "metadata": {
-        "id": "F6v_1wHtG2nS"
+        "id": "o3yULAmA4tyD"
       }
     },
     {
@@ -170,7 +173,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "Provide your GitHub Link here.https://github.com/zaidpeeran/EDA-GTD"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -186,18 +189,40 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "BiGK_a-Yow_n"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "**Write Problem Statement Here.**"
+        "**Write Problem Statement Here.**\n",
+        "\"Despite the extensive data collected in the Global Terrorism Database (GTD) from 1970 through 2017, there exists a need to comprehensively analyze and understand the patterns, trends, and underlying causes of terrorism globally. This database, maintained by researchers at the National Consortium for the Study of Terrorism and Responses to Terrorism (START), provides a rich source of information on both domestic and international terrorist incidents. However, there are several key challenges and questions that need to be addressed:\n",
+        "\n",
+        "1.Identifying Patterns and Trends: How can we effectively analyze the vast amount of data in the GTD to identify significant patterns and trends in terrorism over the past four decades? Are there recurring patterns in terms of geographic locations, types of attacks, or groups responsible?\n",
+        "\n",
+        "2.Understanding Motivations: What are the motivations and ideologies behind various terrorist acts? Can we categorize these motivations and gain insights into the factors driving individuals or groups to engage in acts of terrorism?\n",
+        "\n",
+        "3.Predictive Analysis: Can we develop predictive models based on historical data to anticipate future terrorist threats? How can we use the GTD to enhance counterterrorism efforts and security measures?\n",
+        "\n",
+        "4.Geospatial Analysis: How does geography play a role in terrorism, and what are the spatial distribution patterns of terrorist incidents? Are there regions that are particularly susceptible to terrorism, and if so, why?\n",
+        "\n",
+        "5.Counterterrorism Strategies: What can we learn from the GTD to inform more effective counterterrorism strategies and policies? How can governments and organizations use this data to prevent and mitigate terrorist threats?\n",
+        "\n",
+        "6.Data Quality and Completeness: Are there limitations in the data collected in the GTD, and how can we address issues related to data quality, accuracy, and completeness?\n",
+        "\n",
+        "7.Temporal Analysis: Are there temporal patterns in terrorism, and how have these patterns evolved over time? Are there specific time periods or events that have had a significant impact on the frequency and nature of terrorist incidents?\n",
+        "\n",
+        "8.Comparative Analysis: How does terrorism in different regions and countries compare? Are there lessons that can be drawn from analyzing variations and similarities in terrorism across the world?\n",
+        "\n",
+        "9.Social and Economic Factors: To what extent do social and economic factors contribute to the occurrence of terrorism? Can we identify socioeconomic conditions that may be associated with higher rates of terrorism?\n",
+        "\n",
+        "10.Impact Assessment: What is the human and economic cost of terrorism, and how can we assess its impact on societies and nations?\n",
+        "\n",
+        "Addressing these questions and challenges is crucial for enhancing our understanding of terrorism and developing evidence-based strategies to prevent and respond to terrorist threats effectively. The GTD serves as a valuable resource for researchers, policymakers, and security professionals, and leveraging this data can contribute to a more comprehensive and nuanced approach to counterterrorism efforts worldwide.\"\n",
+        "\n",
+        "This problem statement outlines the key areas of inquiry and research focus related to the Global Terrorism Database and the broader study of terrorism. Researchers and policymakers can use this statement to guide their efforts in analyzing and utilizing the database effectively.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "DpeJGUA3kjGy"
@@ -206,7 +231,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **Define Your Business Objective?**"
+        "#### **Define Your Business Objective?**\n",
+        "\n",
+        "The business objective related to the Global Terrorism Database (GTD) can vary depending on the organization or entity that is utilizing the database. Here are a few potential business objectives:\n",
+        "\n",
+        "1. Research and Analysis: One primary business objective could be to conduct in-depth research and analysis on global terrorism trends and patterns. Organizations, government agencies, or academic institutions may use the GTD to better understand the nature of terrorist attacks, identify emerging trends, and develop strategies to counter terrorism effectively.\n",
+        "\n",
+        "2. Counterterrorism Policy Development: Government agencies and policymakers may use the GTD to inform the development of counterterrorism policies and strategies. The database can help in assessing the effectiveness of existing policies and shaping future ones to enhance national security.\n",
+        "\n",
+        "3. Risk Assessment: Businesses and multinational corporations operating in regions with a history of terrorism may use the GTD to assess and manage security risks. This objective involves using the data to evaluate the potential threats to personnel, assets, and operations and implementing measures to mitigate those risks.\n",
+        "\n",
+        "4. Academic and Educational Purposes: Academic institutions may use the GTD to facilitate research, support coursework, and educate students about the history and dynamics of terrorism. This objective aims to enhance knowledge and understanding of terrorism-related issues.\n",
+        "\n",
+        "5. Public Awareness and Advocacy: Non-governmental organizations (NGOs) and advocacy groups may use the GTD to raise public awareness about the impact of terrorism, advocate for victims' rights, and promote peace and conflict resolution efforts.\n",
+        "\n",
+        "6. Funding and Grants: Organizations that maintain or contribute to the GTD may seek funding and grants from government agencies, philanthropic foundations, or international organizations to support the continued collection and analysis of terrorism data.\n",
+        "\n",
+        "7. International Collaboration: Promoting international collaboration in the fight against terrorism can be an objective. Sharing GTD data with international partners and organizations to foster cooperation and coordination in addressing global terrorism challenges.\n",
+        "\n",
+        "8. Commercial Use: Some businesses may explore commercial opportunities related to the GTD, such as providing specialized consulting services, software tools, or reports based on the database's information.\n",
+        "\n",
+        "It's important to note that the specific business objectives related to the GTD may vary widely depending on the organization's mission, goals, and role in addressing terrorism-related issues. These objectives may also evolve over time as new data and insights become available."
       ],
       "metadata": {
         "id": "PH-0ReGfmX4f"
@@ -304,7 +349,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import Libraries"
+        "# Import Libraries\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib as mtp\n",
+        "import seaborn as sb"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -322,17 +371,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# Load Dataset"
-      ],
-      "metadata": {
-        "id": "4CkvbW_SlZ_R"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### Dataset First View"
@@ -344,10 +382,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset First Look"
+        "# Dataset First Look\n",
+        "path = '/content/GTD.csv'"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv(path)"
+      ],
+      "metadata": {
+        "id": "ey8oKwCyN0MX"
       },
       "execution_count": null,
       "outputs": []
