--- a/GTD_EDA_Submission_.ipynb
+++ b/GTD_EDA_Submission_.ipynb
@@ -6,21 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "vncDsAP0Gaoa",
-        "FJNUwmbgGyua",
-        "w6K7xa23Elo4",
-        "yQaldy8SH6Dl",
         "PH-0ReGfmX4f",
-        "mDgbUHAGgjLW",
-        "O_i_v8NEhb9l",
-        "HhfV-JJviCcP",
-        "Y3lxredqlCYt",
-        "3RnN4peoiCZX",
-        "x71ZqKXriCWQ",
-        "7hBIi_osiCS2",
-        "JlHwYmJAmNHm",
-        "35m5QtbWiB9F",
-        "PoPl-ycgm1ru",
         "H0kj-8xxnORC",
         "nA9Y7ga8ng1Z",
         "PBTbrJXOngz2",
@@ -353,10 +339,23 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib as mtp\n",
-        "import seaborn as sb"
+        "import seaborn as sb\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline\n",
+        "import seaborn as sns\n",
+        "import plotly.express as px"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cgjekGxLuisp"
       },
       "execution_count": null,
       "outputs": []
@@ -371,6 +370,40 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "ZTvS6Eef0r3m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Global Terrorism Data.csv' , encoding = 'latin1')"
+      ],
+      "metadata": {
+        "id": "wMs1RTbL0uqM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head(20).T\n"
+      ],
+      "metadata": {
+        "id": "_YhciwFxPFkW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Dataset First View"
@@ -383,7 +416,7 @@
       "cell_type": "code",
       "source": [
         "# Dataset First Look\n",
-        "path = '/content/GTD.csv'"
+        "path = '/content/Global Terrorism Data.csv'"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
@@ -394,10 +427,21 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv(path)"
+        "df = pd.read_csv(path, encoding = 'latin1')"
       ],
       "metadata": {
         "id": "ey8oKwCyN0MX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df"
+      ],
+      "metadata": {
+        "id": "GzCSMrZp1VDz"
       },
       "execution_count": null,
       "outputs": []
@@ -414,7 +458,35 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Rows & Columns count"
+        "rows_name = df.index\n",
+        "columns_name = df.columns"
+      ],
+      "metadata": {
+        "id": "j4-4SCqF2_H7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(rows_name)\n",
+        "print(columns_name)"
+      ],
+      "metadata": {
+        "id": "E33ERBfA3H-y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dataset Rows & Columns count\n",
+        "rows = len(df)\n",
+        "columns = len(df.columns)\n",
+        "print(rows)\n",
+        "print(columns)"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
@@ -434,10 +506,33 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Info"
+        "# Dataset Info\n",
+        "df.info"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "eZrKaew63nzl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head().T"
+      ],
+      "metadata": {
+        "id": "jldopCJc3sm-"
       },
       "execution_count": null,
       "outputs": []
@@ -454,7 +549,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Duplicate Value Count"
+        "# Dataset Duplicate Value Count\n",
+        "len(df[df.duplicated()])"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
@@ -474,7 +570,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Missing Values/Null Values Count"
+        "# Missing Values/Null Values Count\n",
+        "print(df.isnull().sum())"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -485,10 +582,172 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing the missing values"
+        "def missing_values():\n",
+        "    temp_dict = dict()\n",
+        "    for i in df.columns:\n",
+        "        if df[i].isnull().sum() > 0:\n",
+        "            temp_dict[i] = df[i].isnull().sum()\n",
+        "    return temp_dict\n",
+        "\n",
+        "# gives the information of missing values in each of the decorations\n",
+        "missing_values()"
+      ],
+      "metadata": {
+        "id": "LLg80EaqPcxn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(missing_values())"
+      ],
+      "metadata": {
+        "id": "O7av0FTnRRVg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "_mGk2ZTMP5Sy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Visualizing the missing values\\\n",
+        "plt.figure(figsize=(8,6))\n",
+        "sns.heatmap(df.isnull() , cmap = 'viridis' , cbar = False)\n",
+        "plt.title('HEAT MAP FOR MISSING VALUES')\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#filling NULL value in 4 column with respective values\n",
+        "\n",
+        "df.fillna({\"provstate\":\"NAN\"}, inplace=True)\n",
+        "df.fillna({\"city\":\"NAN\"}, inplace=True)\n",
+        "df.fillna({\"latitude\":0}, inplace=True)\n",
+        "df.fillna({\"longitude\":0}, inplace=True)\n",
+        "df.fillna({\"targsubtype1\":0}, inplace=True)\n",
+        "df.fillna({\"targsubtype1_txt\":\"NAN\"}, inplace=True)\n",
+        "df.fillna({\"corp1\":'NAN'}, inplace=True)\n",
+        "df.fillna({\"target1\":'NAN'}, inplace=True)\n",
+        "df.fillna({\"natlty1\":0}, inplace=True)\n",
+        "df.fillna({\"natlty1_txt\":\"NAN\"}, inplace=True)\n",
+        "df.fillna({\"guncertain1\":0}, inplace=True)\n",
+        "df.fillna({\"weapsubtype1\":0}, inplace=True)\n",
+        "df.fillna({\"weapsubtype1_txt\":\"NAN\"}, inplace=True)\n",
+        "df.fillna({\"nkill\":0}, inplace=True)\n",
+        "df.fillna({\"nwound\":0}, inplace=True)\n",
+        "df.fillna({\"ishostkid\":0}, inplace=True)\n",
+        "df.fillna({\"specificity\":0}, inplace=True)\n",
+        "df.fillna({\"doubtterr\":0}, inplace=True)\n",
+        "df.fillna({\"multiple\":0}, inplace=True)"
+      ],
+      "metadata": {
+        "id": "x-65Oi8IU30-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.isnull().sum())"
+      ],
+      "metadata": {
+        "id": "eJA-JSKYVAqF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(10, 5))\n",
+        "sns.heatmap(df.isnull(), cbar=False, cmap='rocket')\n",
+        "plt.title('Missing Values Heatmap')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "HLbAXHkSVI--"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "missing_percentage = df.isnull().mean() * 100\n",
+        "\n",
+        "# Create a bar chart\n",
+        "plt.figure(figsize=(30, 30))\n",
+        "missing_percentage.plot(kind='bar')\n",
+        "plt.ylabel('Percentage Missing')\n",
+        "plt.title('Missing Values by Column')\n",
+        "middle_bound = 50\n",
+        "\n",
+        "\n",
+        "# Count the number of bars in the specified range\n",
+        "bars_in_range = ((missing_percentage >= lower_bound) & (missing_percentage <= upper_bound)).sum()\n",
+        "\n",
+        "plt.axhline(y=middle_bound, color='blue', linestyle='--', label='Middle Bound')\n",
+        "\n",
+        "plt.legend()\n",
+        "plt.show()\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "81U55vhWVkma"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "bars_below_middle_bound = (missing_percentage < middle_bound).sum()\n",
+        "print(\"bars_below_middle_bound :\" , bars_below_middle_bound)\n",
+        "\n",
+        "bars_above_middle_bound = (missing_percentage > middle_bound).sum()\n",
+        "print(\"bars_above_middle_bound :\" , bars_above_middle_bound)\n"
+      ],
+      "metadata": {
+        "id": "49scEYctcfzu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import missingno as msno\n",
+        "\n",
+        "msno.matrix(df, figsize=(30, 20))\n",
+        "\n",
+        "# Display the plot\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "wja7gdJ1V8Hb"
       },
       "execution_count": null,
       "outputs": []
@@ -505,7 +764,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "From above dataset we conclude that, we try to analysis with three diffrent graph they are heatmap , bar graph and matice.But from bar graph i understand that by column wise how many values are missing and are null.In bar graph i denoted the Y axis with 100 limit only because i declare missing values in the percentage format only.In outof 135 columns there are 106 columns are missing some data or valuse in that particular column.The missing values are object type, integer type and also boolen type.Alsmost some columns have 80-90 percent missing valuses."
       ],
       "metadata": {
         "id": "gfoNAAC-nUe_"
@@ -523,7 +782,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Columns"
+        "# Dataset Columns\n",
+        "df[df.columns].T"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -534,7 +794,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe"
+        "# Dataset Describe\n",
+        "df.describe()"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
