--- a/GTD_EDA_Submission_.ipynb
+++ b/GTD_EDA_Submission_.ipynb
@@ -7,14 +7,8 @@
       "provenance": [],
       "collapsed_sections": [
         "PH-0ReGfmX4f",
-        "H0kj-8xxnORC",
-        "nA9Y7ga8ng1Z",
-        "PBTbrJXOngz2",
-        "u3PMJOP6ngxN",
-        "dauF4eBmngu3",
         "bKJF3rekwFvQ",
         "MSa1f5Uengrz",
-        "GF8Ens_Soomf",
         "0wOQAZs5pc--",
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
@@ -705,7 +699,7 @@
         "\n",
         "\n",
         "# Count the number of bars in the specified range\n",
-        "bars_in_range = ((missing_percentage >= lower_bound) & (missing_percentage <= upper_bound)).sum()\n",
+        "bars_in_range = ((missing_percentage >= middle_bound) & (missing_percentage <= middle_bound)).sum()\n",
         "\n",
         "plt.axhline(y=middle_bound, color='blue', linestyle='--', label='Middle Bound')\n",
         "\n",
@@ -815,7 +809,50 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "**eventid**::\n",
+        "Numeric Variable\n",
+        "Incidents from the GTD follow a 12-digit Event ID system.\n",
+        "• First 8 numbers – date recorded “yyyymmdd”.\n",
+        "• Last 4 numbers – sequential case number for the given day (0001, 0002 etc). This is\n",
+        "“0001” unless there is more than one case occurring on the same date.\n",
+        "\n",
+        "**Incident Information**::\n",
+        "A brief narrative summary of the incident, noting the “when, where, who, what, how, and\n",
+        "why.\n",
+        "\n",
+        "**Incident Location**::\n",
+        "This field identifies the country or location where the incident occurred. Separatist regions, such\n",
+        "as Kashmir, Chechnya, South Ossetia, Transnistria, or Republic of Cabinda, are coded as part of\n",
+        "the “home” country\n",
+        "\n",
+        "**Attack Information**::\n",
+        "This field captures the general method of attack and often reflects the broad class of tactics\n",
+        "used. It consists of nine categories, which are defined below. Up to three attack types can be\n",
+        "recorded for each incident. Typically, only one attack type is recorded for each incident unless\n",
+        "the attack is comprised of a sequence of events.\n",
+        "\n",
+        "**Weapon Information**::\n",
+        "Information on up to four types and sub-types of the weapons used in an attack are recorded\n",
+        "for each case, in addition to any information on specific weapon details reported\n",
+        "\n",
+        "**Target/Victim Information**::\n",
+        "Information on up to three targets/victims is recorded for each incident. The target/victim\n",
+        "information fields coded for each of the three targets include type, name of entity, specific\n",
+        "target/victim, and nationality of the target/victim. The field contains information on both\n",
+        "intended targets and incidental bystanders, and therefore, intentionality should be carefully\n",
+        "considered\n",
+        "\n",
+        "**Perpetrator Information**::\n",
+        "Information on up to three perpetrators is recorded for each incident. This includes the\n",
+        "perpetrator group name and the perpetrator group sub-name, as well as details about any\n",
+        "claims of responsibility for the attack. Note that the perpetrator attributions recorded for each\n",
+        "attack reflect what is reported in open-source media accounts, which does not necessarily\n",
+        "indicate a legal finding of culpability.\n",
+        "\n",
+        "**Casualties and Consequences **::\n",
+        "This field stores the number of total confirmed fatalities for the incident. The number includes\n",
+        "all victims and attackers who died as a direct result of the incident."
       ],
       "metadata": {
         "id": "aJV4KIxSnxay"
@@ -833,10 +870,49 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check Unique Values for each variable."
+        "# Check Unique Values for each variable.\n",
+        "unique_value = {}\n",
+        "for column in df.columns:\n",
+        "  unique_value[column] = df[column].unique()\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "zms12Yq5n-jE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(unique_value[column])"
+      ],
+      "metadata": {
+        "id": "oIlsh05HZPY3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Assuming you have a DataFrame called 'df' with your dataset\n",
+        "\n",
+        "# Create a generator that yields unique values for each variable\n",
+        "unique_values_generator = ((column, df[column].unique()) for column in df.columns)\n",
+        "\n",
+        "# You can then iterate through the generator\n",
+        "for column, values in unique_values_generator:\n",
+        "    # Do something with the unique values for each column\n",
+        "    print(f'Column: {column}')\n",
+        "    print(f'Unique Values: {values}')\n"
+      ],
+      "metadata": {
+        "id": "nRBlpy2TZoq1"
       },
       "execution_count": null,
       "outputs": []
