--- a/GTD_EDA_Submission_.ipynb
+++ b/GTD_EDA_Submission_.ipynb
@@ -938,10 +938,50 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code to make your dataset analysis ready."
+        "\n",
+        "\n",
+        "# renaming date time to change type into timestamp later\n",
+        "df = df.rename(columns={'iyear': 'year', 'imonth': 'month', 'iday': 'day'})\n",
+        "\n"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#In which year most attack happen and how much happen?\n",
+        "# Group the data by a column\n",
+        "grouped = df.groupby('year')\n",
+        "\n",
+        "# Calculate the sum of a numeric column within each group\n",
+        "group_count= grouped['year'].count()\n",
+        "gc_df = pd.DataFrame(group_count)\n",
+        "gc_df = pd.DataFrame(group_count).rename(columns={'year': 'attacks'})\n",
+        "# Display the grouped data\n",
+        "gc_df\n"
+      ],
+      "metadata": {
+        "id": "HcpY_fU6j7Vm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "year_with_highest_attacks = gc_df['attacks'].idxmax()\n",
+        "\n",
+        "# Get the maximum number of attacks\n",
+        "highest_attacks = gc_df['attacks'].max()\n",
+        "\n",
+        "print(f\"The year with the highest number of attacks is {year_with_highest_attacks} with {highest_attacks} attacks.\")\n"
+      ],
+      "metadata": {
+        "id": "w74DIBMKpTdb"
       },
       "execution_count": null,
       "outputs": []
@@ -958,7 +998,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "**There are many insights i have found that**\n",
+        "\n",
+        "**1**.The year with the highest number of attacks is 2014 with 16903 attacks.\n"
       ],
       "metadata": {
         "id": "LbyXE7I1olp8"
@@ -985,7 +1027,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 1 visualization code"
+        "plt.figure(figsize=(10, 6))\n",
+        "plt.bar(gc_df.index, gc_df['attacks'])\n",
+        "plt.xlabel('Year')\n",
+        "plt.ylabel('Number of Attacks')\n",
+        "plt.title('Number of Attacks Per Year')\n",
+        "plt.xticks(rotation=50)  # Rotate x-axis labels for better readability\n",
+        "plt.tight_layout()\n",
+        "\n",
+        "# Highlight the year with the highest number of attacks\n",
+        "plt.annotate(f'Highest: {highest_attacks}', xy=(year_with_highest_attacks, highest_attacks), xytext=(year_with_highest_attacks - 5, highest_attacks + 1000),\n",
+        "             arrowprops=dict(arrowstyle='->', color='red'))\n",
+        "\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "7v_ESjsspbW7"
