--- a/GTD_EDA_Submission_.ipynb
+++ b/GTD_EDA_Submission_.ipynb
@@ -674,6 +674,17 @@
     {
       "cell_type": "code",
       "source": [
+        "len(df.isnull().sum())"
+      ],
+      "metadata": {
+        "id": "ol_LhiGoWm-a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "plt.figure(figsize=(10, 5))\n",
         "sns.heatmap(df.isnull(), cbar=False, cmap='rocket')\n",
         "plt.title('Missing Values Heatmap')\n",
@@ -987,33 +998,66 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "### What all manipulations have you done and insights you found?"
-      ],
-      "metadata": {
-        "id": "MSa1f5Uengrz"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**There are many insights i have found that**\n",
+        "year_with_lowest_attacks = gc_df['attacks'].idxmin()\n",
         "\n",
-        "**1**.The year with the highest number of attacks is 2014 with 16903 attacks.\n"
+        "# Get the maximum number of attacks\n",
+        "lowest_attacks = gc_df['attacks'].min()\n",
+        "\n",
+        "print(f\"The year with the highest number of attacks is {year_with_lowest_attacks} with {lowest_attacks} attacks.\")\n"
       ],
       "metadata": {
-        "id": "LbyXE7I1olp8"
-      }
+        "id": "OuCiKBqzX_QO"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "## ***4. Data Vizualization, Storytelling & Experimenting with charts : Understand the relationships between variables***"
+        "#average month for most attack since 1970\n",
+        "gp = df.groupby('month')\n",
+        "gp_count = gp['month'].count()\n",
+        "gpm_df = pd.DataFrame(gp_count)\n",
+        "gpm_df = pd.DataFrame(gp_count).rename(columns={'month': 'attacks'} )\n",
+        "gpm_df.reset_index(drop=False, inplace=True)\n",
+        "gpm_df['month'] = gpm_df['month'].replace(0, 'Undefine' )\n",
+        "\n",
+        "gpm_df"
       ],
       "metadata": {
-        "id": "GF8Ens_Soomf"
-      }
+        "id": "pLfIJhmmZA5A"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Total number of attacks in every year by region\n",
+        "gpr = df.groupby(['year','region'])\n",
+        "gpr_count = gpr['year'].count()\n",
+        "gpr_df = pd.DataFrame(gpr_count).rename(columns = {'year' : 'attacks'}).reset_index().head(20)\n",
+        "\n",
+        "gpr_df\n"
+      ],
+      "metadata": {
+        "id": "oHrxZkC7dEfr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['region'].unique()"
+      ],
+      "metadata": {
+        "id": "Q8YzysAbd-lI"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1038,6 +1082,9 @@
         "# Highlight the year with the highest number of attacks\n",
         "plt.annotate(f'Highest: {highest_attacks}', xy=(year_with_highest_attacks, highest_attacks), xytext=(year_with_highest_attacks - 5, highest_attacks + 1000),\n",
         "             arrowprops=dict(arrowstyle='->', color='red'))\n",
+        "plt.annotate(f'Lowest: {lowest_attacks}', xy=(year_with_lowest_attacks, lowest_attacks), xytext=(year_with_lowest_attacks - 5, lowest_attacks + 1000),\n",
+        "             arrowprops=dict(arrowstyle='->', color='green'))\n",
+        "\n",
         "\n",
         "plt.show()\n"
       ],
@@ -1114,7 +1161,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 2 visualization code"
+        "# Chart - 2 visualization code\n",
+        "plt.figure(figsize = (10,6))"
       ],
       "metadata": {
         "id": "R4YgtaqtYklH"
