--- a/GTD_EDA_Submission_.ipynb
+++ b/GTD_EDA_Submission_.ipynb
@@ -584,7 +584,7 @@
         "    return temp_dict\n",
         "\n",
         "# gives the information of missing values in each of the decorations\n",
-        "missing_values()"
+        "list[missing_values()]"
       ],
       "metadata": {
         "id": "LLg80EaqPcxn"
@@ -1038,8 +1038,7 @@
         "#Total number of attacks in every year by region\n",
         "gpr = df.groupby(['year','region'])\n",
         "gpr_count = gpr['year'].count()\n",
-        "gpr_df = pd.DataFrame(gpr_count).rename(columns = {'year' : 'attacks'}).reset_index().head(20)\n",
-        "\n",
+        "gpr_df = pd.DataFrame(gpr_count).rename(columns = {'year' : 'attacks'}).reset_index()\n",
         "gpr_df\n"
       ],
       "metadata": {
@@ -1055,6 +1054,17 @@
       ],
       "metadata": {
         "id": "Q8YzysAbd-lI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.columns"
+      ],
+      "metadata": {
+        "id": "bfDAGWXhKcNv"
       },
       "execution_count": null,
       "outputs": []
@@ -1090,6 +1100,15 @@
       ],
       "metadata": {
         "id": "7v_ESjsspbW7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "v0YnDIjeHmcZ"
       },
       "execution_count": null,
       "outputs": []
@@ -1161,8 +1180,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 2 visualization code\n",
-        "plt.figure(figsize = (10,6))"
+        "heatmap_data = gpr_df.pivot_table(index='region', columns='year', values='attacks', fill_value=0)\n",
+        "\n",
+        "# Create a heatmap\n",
+        "plt.figure(figsize=(30, 15))\n",
+        "sns.heatmap(heatmap_data, annot=True, fmt='d', cmap='YlGnBu')\n",
+        "plt.xlabel('Year')\n",
+        "plt.ylabel('Region')\n",
+        "plt.title('Total Number of Attacks Heatmap')\n",
+        "plt.show()\n",
+        "\n"
       ],
       "metadata": {
         "id": "R4YgtaqtYklH"
