--- a/GTD_EDA_Submission_.ipynb
+++ b/GTD_EDA_Submission_.ipynb
@@ -1066,8 +1066,8 @@
         "gcoun_count = gcoun['country'].count()\n",
         "gcc_df = pd.DataFrame(gcoun_count).reset_index()\n",
         "gcc_df = gcc_df.rename(columns={'country_txt' : 'country_name' , 'country' : 'attacks' })\n",
-        "gcc_df = gcc_df.sort_values(by='attacks', ascending=False)\n",
-        "gcc_df.head(10)\n",
+        "gcc_df = gcc_df\n",
+        "gcc_df.head(10).sort_values(by='attacks', ascending=False)\n",
         "\n",
         "\n"
       ],
@@ -1087,6 +1087,23 @@
       ],
       "metadata": {
         "id": "_RYzVao5Fs-u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Top 10 States under attack across the year.\n",
+        "gs = df.groupby(['year' , 'provstate'])\n",
+        "gs_count = gs['year'].count()\n",
+        "gs_df = pd.DataFrame(gs_count)\n",
+        "gs_df = gs_df.rename(columns= {'year' : 'attacks'})\n",
+        "gs_df = gs_df.sort_values(by='attacks', ascending=False)\n",
+        "gs_df"
+      ],
+      "metadata": {
+        "id": "OKkE9xzAfS45"
       },
       "execution_count": null,
       "outputs": []
@@ -1403,7 +1420,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 4 visualization code"
+        "# Chart - 4 visualization code\n",
+        "#Top 10 States under attack across the year\n",
+        "heatmap_data = gs_df.pivot_table(index='year', columns='provstate', values='attacks', fill_value=0)\n",
+        "custom_palette = sns.color_palette(\"coolwarm\", as_cmap=True)\n",
+        "# Create a heatmap\n",
+        "plt.figure(figsize=(50 ,35))\n",
+        "sns.heatmap(heatmap_data, annot=True, fmt='d', cmap= custom_palette)\n",
+        "plt.xlabel('provstate')\n",
+        "plt.ylabel('Year')\n",
+        "plt.title('Total Number of Attacks Heatmap')\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "78hAbVTWGB8S"
